修正脚本中因为post_id失效产生的错误

--- a/blogs/使用脚本将笔记同步更新到博客上.md
+++ b/blogs/使用脚本将笔记同步更新到博客上.md
@@ -394,11 +394,13 @@ def publish_or_update(title: str, content: str, tags: list, is_draft: bool, post
 
     if post_id:
 
-        original = get_post(post_id)
+    original = get_post(post_id)
 
-        if not original:
+    if not original:
 
-            raise RuntimeError(f"无法获取原文信息，ID: {post_id}")
+        print(f"⚠️ 原文章 ID={post_id} 不存在或无权访问，将作为新文章发布", file=sys.stderr)
+
+        post_id = None  # 清除无效 ID，转为新建
 
   
 
