--- a/blogs/使用脚本将笔记同步更新到博客上.md
+++ b/blogs/使用脚本将笔记同步更新到博客上.md
@@ -28,7 +28,18 @@ repo/
 在博客网站上发布一条博客，抓包网络请求获取相关接口信息
 
 ### 编写发布博客的脚本
-这里用python写了个向博客园发布博客的脚本，直接拿来用的话记得把`COOKIE`和`XSRF_TOKEN`换成自己的。如果仓库公开的话建议放在环境变量里不要明文存在脚本里
+这里用python写了个向博客园发布博客的脚本，直接拿来用的话记得把`COOKIE`和`XSRF_TOKEN`换成自己的。如果仓库公开的话建议放在环境变量里不要明文存在脚本里。这里会读取md文件中的font-matter作为文章信息，格式如下：
+
+```markdown
+title: 
+tags:
+  - 博客园
+draft: "false"
+post_id: 
+```
+
+其中post_id字段在发布后自动生成，用来修改已发布的文章，脚本如下：
+
 ```python
 # -*- coding: utf-8 -*-
 
