--- a/blogs/[后端]使用缓存加速查询.md
+++ b/blogs/[后端]使用缓存加速查询.md
@@ -4,22 +4,34 @@ tags:
   - Java
   - SpringBoot
   - Redis
+  - Spring Cache
+  - 缓存
+  - 性能优化
 draft: "false"
 ---
 
 # 使用缓存加速查询
 
-在后端进行查询时需要频繁操作数据库，但数据库查询操作效率较低，压力很大。那么这时候就可以考虑将数据存在Redis中，需要时直接从Redis中获取，效率更高。
+在高并发或高频查询场景下，直接访问数据库容易成为性能瓶颈。此时可引入 Redis 作为缓存层：优先从缓存读取数据，命中则直接返回；未命中再回源查询数据库，并将结果写入缓存，从而显著降低数据库压力、提升响应速度。
 
 ### CRUD流程变动
 
-使用Redis查询就需要修改相应的操作，再查询时先访问Redis进行查询，如果没有得到结果则沿用从数据库查询的逻辑，而后再将数据缓存到Redis。
+引入缓存后，传统的增删改查（CRUD）流程需要相应调整，以确保数据一致性：
 
-但这又带来一个问题，增删改的操作都在数据库中进行。如果数据库中的数据发生变动，而用户从缓存中获取的数据还是保持原样，显然是不行的，所以增删改在操作前也需要增加缓存上的操作。
+- **查询**  
+  先尝试从 Redis 获取数据。若命中缓存，直接返回；若未命中，则查询数据库，并将结果写入缓存供后续使用。
+
+- **新增 / 修改  
+  先操作数据库，成功后再更新或清除对应缓存。**推荐做法是清除缓存**（而非更新），让下一次查询自动重建缓存，避免因更新失败导致脏数据。
+
+- **删除**  
+  先删除数据库记录，再清除 Redis 中对应的缓存项。
+
+>  ⚠️ 注意：缓存操作应放在数据库事务**提交之后**执行。否则，若事务回滚，缓存中可能残留无效数据，造成不一致。
 
 ### SpringBoot中使用注解提高开发效率
 
-需要的依赖：
+#### 添加依赖
 
 ```xml
 <!-- 缓存框架 -->
@@ -37,32 +49,54 @@ draft: "false"
 <!-- 数据库和相关操作的依赖 -->
 ```
 
+#### 启用缓存
+
+在启动类加上`@EnableCaching`注解
+
 #### 常用注解
 
-- `@EnableCaching`
+##### `@Cacheable` —— 查询时自动缓存
+- 方法执行前先查缓存；
+- 若存在，直接返回缓存值，**跳过方法体执行**；
+- 若不存在，执行方法并将返回值存入缓存。
+```java
+@Service
+public class UserService {
 
-  加在启动类，开启缓存注解
+    @Cacheable(cacheNames = "users", key = "#id")
+    public User getUserById(Long id) {
+        return userRepository.findById(id).orElse(null);
+    }
+}
+```
+> Redis key 为 `cacheNames::id`
 
-- `@CachePut(cacheNames = "", key = "")`
 
-  加在Controller中的接口方法上
 
-  最终存储到Redis的key为`cacheNames + key`
+#####  `@CachePut` —— 更新时刷新缓存
+- **总是执行方法体**；
+- 将返回值写入缓存，用于更新已有缓存项。
+```java
+@CachePut(cacheNames = "users", key = "#user.id")
+public User updateUser(User user) {
+    return userRepository.save(user); // 总是执行
+}
+```
+>  先更新 DB，再更新缓存
 
-  注意key的取值可以用SpEL定义为
 
-  - `#传进方法的参数名`          注意对应关系
-  - `#p0`、`#pn`等          传进来的第n+1个参数           
-  - `#result`          返回值
 
-- `@Cacheable(cacheNames = "", key = "")`
+##### `@CacheEvict` —— 删除时清理缓存
 
-  加在Controller中的接口方法上
+```java
+@CacheEvict(cacheNames = "users", key = "#id")
+public void deleteUser(Long id) {
+    userRepository.deleteById(id);
+}
 
-  在方法执行前先查询缓存中是否有数据，如果有数据直接返回查询结果。没有的话再调用方法并将返回值放到缓存中。
-
-- `@CacheEvict(cacheNames = "", key = "")`/`@CacheEvict(cacheNames = "", allEntries = "true")`
-
-  加在Controller中的接口方法上
-
-  按key清理缓存数据 / 清除cacheNames下所有数据
+// 或清空整个缓存空间
+@CacheEvict(cacheNames = "users", allEntries = true)
+public void clearAllUsers() {
+    userRepository.deleteAll();
+}
+```
