--- a/blogs/使用脚本将笔记同步更新到博客上.md
+++ b/blogs/使用脚本将笔记同步更新到博客上.md
@@ -403,10 +403,11 @@ def publish_or_update(title: str, content: str, tags: list, is_draft: bool, post
     }
 
   
-
+	original = None
+    
     if post_id:
 
-    original = get_post(post_id)
+    	original = get_post(post_id)
 
     if not original:
 
